# midi_api

./: CMakeLists.txt  README.md  main.cpp
Headers/: Bar.h  DefaultMidiOutput.h  Event.h  File.h  IOHelper.h  MessageInterface.h  MidiPlayer.h  NoteInfo.h  Track.h  WindowsPlayer.h  bar.h  constants.h  event.h  file.h  midi_api.h  midi_player.h  track.h
Source/: Bar.cpp  Event.cpp  File.cpp  IOHelper.cpp  MessageInterface.cpp  MidiPlayer.cpp  NoteInfo.cpp  Track.cpp  WindowsPlayer.cpp  bar.cpp  event.cpp  file.cpp  midi_player.cpp  track.cpp
src/: constants.h  midi_api.h
src/enums/: instrument.h  meta_t.h  msg_t.h  note.h
src/event/: event.cpp  event.h
src/file/: file.cpp  file.h
src/file/IOHelper/: IOHelper.cpp  IOHelper.h
src/file/NoteInfo/: NoteInfo.cpp  NoteInfo.h
src/file/bar/: bar.cpp  bar.h
src/file/track/: track.cpp  track.h
src/pch/: pch.h
src/player/: player.cpp  player.h
src/player/DefaultMidiPlayer/: DefaultMidiPlayer.h
src/player/DefaultMidiPlayer/MessageInterface/: MessageInterface.cpp  MessageInterface.h
src/player/DefaultMidiPlayer/WindowsPlayer/: WindowsPlayer.cpp  WindowsPlayer.h
